# roadpricing

./: README.md
5-implementation/src/: main.rs
5-implementation/src/utilities/: elgamal.rs  group_hash.rs
6-implementation/: .gitignore  Cargo.toml  Makefile
6-implementation/src/: cellmap.rs  lib.rs  protocol.rs
6-implementation/src/utilities/: mod.rs
6.2-performance/: benchmark.ipynb  common.py
6.2-performance/data/: benchmark_results_p256_2.csv  benchmark_results_p256_24-10-24.csv
